<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">9GAG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">That&amp;apos;s the image to draw the progressbar around.</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="menu_action_refresh">refresh</string>
    <string name="menu_action_more">more</string>
    <string name="menu_action_about">about</string>
    <string name="menu_action_save">save</string>
    <string name="menu_action_weblink">go to web</string>
    <string name="menu_action_copy_title">copy title</string>
    <string name="menu_action_translate_title">translate title to Chinese</string>
    <string name="menu_action_share">share</string>
     <string name="menu_action_share_all">share both</string>
      <string name="menu_action_share_text">share title only</string>
       <string name="menu_action_share_image">share image only</string>
    <string name="mxx_view_string_nonetwork">no network</string>
    <string name="mxx_view_string_nomore">no more to load</string>
    <string name="str_back_twice_exit">Press back again quickly to exit</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="str_loading">loading...</string>
    <string name="str_about_9gag">9GAG, Inc., is a social media website whereby users upload and share user-generated images, videos, and GIFs. The website\'s content, generally referred to as "internet memes" or "internet jokes", is upvoted, downvoted, and commented on by users based on its popularity at a given time.\nSince the website\'s founding in 2008 by Hong Kong entrepreneurs Chris Chan, Ray Chan, Derek Chan, Brian Yu, and Marco Fung, it has grown in popularity, currently having over 9 million Facebook “likes” and 2.4 million Twitter followers. Since 2008 the number of unique global monthly website visitors has also increased from 500,000 to 67 million.\n9GAG users have also commonly re-posted (without any consent from its respective authors) content found on other humor related websites like 4chan, FunnyJunk, Newgrounds, Reddit, SomethingAwful, and YTMND, often with a 9GAG watermark. In 2011, 9GAG and 4chan disputed authorship of internet memes published on both websites, whereby each company claimed the memes originated in their own website. Evidence seems to support 4chan\'s claim that most of the disputed content was created by 4chan users. As stated by 9GAG co-founder Ray Chan, "9GAG does not create memes or rage comics, but helps spread them." 9GAG also adopted 4chan\'s "legion" and “hearth of the internet” nicknames.\nFollowing these controversies, 4chan retaliated in 2011 by uploading large amounts of obscene content like pornography and gore onto 9GAG. While moderators were able to delete some of the spam content, the obscene posts were uploaded constantly for over 40 hours, and soon after 4chan began a series of DDOS attacks that made 9GAG inaccessible for many users.</string>
    <string name="str_about_author">Mixiaoxiao, an undergraduate of Beihang university.\nEmail:chyechye@foxmail.com\n\nBeihang University, previously known as Beijing University of Aeronautics and Astronautics (simplified Chinese: 北京航空航天大学; traditional Chinese: 北京航空航天大學, abbreviated as BUAA or Beihang) is a major public research university located in Beijing, China.It is a member of China\'s Project 211 and Project 985 group of key state universities, with a heavy focus on high level technological and scientific research. BUAA was founded on October 25, 1952 with an area of over 100 hectares, BUAA is one of China\'s leading universities on research and education. It is regarded as one of the best engineering universities in China and has a great influence on China\'s aeronautical and astronautical industry.</string>

</resources>