<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
        android:id="@+id/action_refresh"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:icon="@drawable/mxx_holo_ic_refresh_white"
        android:title="@string/menu_action_refresh"/>
     <item
        android:id="@+id/action_more"
        android:icon="@drawable/mxx_holo_ic_action_more_whitle"
        android:orderInCategory="100"
        android:title="@string/menu_action_more"
        android:showAsAction="always">
        <!-- submenu -->
        <menu>
            <item
                android:id="@+id/action_about"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/menu_action_about"/>
        </menu>
    </item>

</menu>
